--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link
+		<!-- <link
 			rel="icon"
 			type="image/svg+xml"
 			href="/src/Assets/Images/Icon/icon.png"
-		/>
+		/> -->
+		<link rel="icon" type="image/svg+xms" href="src/Assets//Icon/icon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>LibNow</title>
 	</head>
